@startuml
'https://plantuml.com/class-diagram

abstract class AudioElement {
    	# String title;
     	# String artist;
     	# int lengthInSeconds;
     	# UUID uuid;
     	# String content;

     	+ AudioElement(title: String, artist: String,
     	 lengthInSeconds: int, id: String, content: String);
     	+ AudioElement(title: String, artist: String,
         lengthInSeconds: int, content: String);
        + AudioElement(Element xmlElement);
}
abstract AbstractCollection
interface List
interface Collection
class Song
class AudioBook

AudioElement <|-- Song
AudioElement <|-- AudioBook

List <|-- AudioElement
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AudioElement

/'
class ArrayList {
Object[] elementData
size()
}
'/
enum Category {
YOUTH
NOVEL
THEATER
DOCUMENTARY
SPEECH
}

enum Genre {
JAZZ
CLASSIC
HIPHOP
ROCK
POP
RAP
}

enum Language {
FRENCH
ENGLISH
ITALIAN
SPANISH
GERMAN
}


@enduml